MVP Rest API for 5173